# cli_book_library

./: .env.example  .gitignore  README.md  bs4_tutorial.py  download.py  main.py  parse.py  parse_tululu_category.py  pyproject.toml  render_website.py  settings.py  template.html  tululu.py  tululu_category.py  utils.py
downloads/: books.json
downloads/books/: 19596.Баллада о зонтике в клеточку-25608646606.txt  19735.Бегущий За Ветром-25746781795.txt  19775.Белый, белый каштановый цвет-25897024616.txt  19819.Бес опечаток-26088512096.txt  19888.Бесстрашный капитан Эмвук-26253755898.txt  19923.Бездна-26253755914.txt  20027.Битва флотов-26555857485.txt  20105.Близнецы (часть 1)-26735499658.txt  20145.Бог, который приходит с ветром-26849350369.txt  20217.Большая полицейская сказка-27041247008.txt  20286.Божье Око-27173199770.txt  20366.Брошенные машины-27342909267.txt  20405.Бульвар Целакантус (сборник)-27480477420.txt  20667.Часы с браслетом-28156661154.txt  20790.Человек с того света-28308211334.txt  20823.Чердак Вселенной-28631717970.txt  20854.Черная Фиола-28631717986.txt  21000.Честное Слово-29066739536.txt  21103.Что-то кончится, что-то начнется-29389203774.txt  21160.Что желаете-29578963226.txt  21188.Чудо-Птица-29578963242.txt  21215.Чудовище Лабиринта (Ричард Блейд, странствие 12)-29718283588.txt  21249.Чувство силы-29866203439.txt  (+10 more)
pages/: index1.html  index10.html  index11.html  index12.html  index13.html  index14.html  index15.html  index16.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
(+1 files in other folders)
